letter-spacing fix

--- a/css/all.css
+++ b/css/all.css
@@ -40,6 +40,7 @@
   font-size: 22px;
   font-family: "Proxima Nova Regular";
   color: #fff;
+  letter-spacing: 1.56px;
   text-transform: uppercase;
   font-weight: 700;
   text-align: center;  
