--- a/css/p_2.css
+++ b/css/p_2.css
@@ -48,6 +48,7 @@
   padding-bottom: 36px;
   
   font-size: 21px;
+  letter-spacing: 1.5px;
   font-family: "SF UI Display";
   font-weight: 900;
   color: #000;
@@ -86,6 +87,7 @@
   padding-bottom: 20px;
   
   font-size: 19px;
+  letter-spacing: 2px;
   font-family: "Proxima Nova Regular";
   color: #ef7f1a;
   font-weight: 700;
