--- a/css/p_3.css
+++ b/css/p_3.css
@@ -27,6 +27,7 @@
   padding-left: 44px;
   
   font-size: 24px;
+  letter-spacing: 1.2px;
   color: #fff;
   line-height: 77px;
   font-family: "SF UI Display";
@@ -47,6 +48,7 @@
   padding-left: 44px;
   
   font-size: 24px;
+  letter-spacing: 1.2px;
   color: #fff;
   line-height: 77px;
   font-family: "SF UI Display";
@@ -70,7 +72,8 @@
   padding-left: 44px;
   
   font-family: "SF UI Display";
-  font-size: 400;
+  font-weight: 400;
+  letter-spacing: 1px;
   font-size: 21px;
   line-height: 38px;
   color: #fff;
@@ -90,6 +93,7 @@
   margin-left: 44px;
   
   font-size: 21px;
+  letter-spacing: 1px;
   line-height: 38px;
   color: #fff;
   font-family: "SF UI Display";
@@ -99,4 +103,5 @@
   display: block;
   font-weight: 700;
   font-size: 27px;
+  letter-spacing: 1.3px;
 }
