--- a/css/p_5.css
+++ b/css/p_5.css
@@ -19,6 +19,7 @@
   
   font-family: "SF UI Display";
   font-weight: 700;
+  letter-spacing: 2.6px;
   font-size: 35px;
   color: #ef7f1a;
 }
@@ -28,6 +29,7 @@
   
   font-family: "SF UI Display";
   font-weight: 400;
+  letter-spacing: 1.2px;
   font-size: 25px;
   line-height: 35px;
   color: #1b1a19;
